...
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView
                                android:id="@+id/rec_match"
                                android:background="@android:color/background_light"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                        </android.support.v7.widget.RecyclerView>
                        <ProgressBar
                                android:id="@+id/progress_bar"
...
